--- a/Assets/ImmersalRESTLocalizerTest/Scripts/ImmersalRequestTypes/ImmersalRESTLocalizer.Type.asmdef
+++ b/Assets/ImmersalRESTLocalizerTest/Scripts/ImmersalRequestTypes/ImmersalRESTLocalizer.Type.asmdef
@@ -2,7 +2,11 @@
     "name": "ImmersalRESTLocalizer.Types",
     "rootNamespace": "",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Android",
+        "Editor",
+        "iOS"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
